# libgpiod

./: .gitignore  .mailmap  .readthedocs.yaml  Android.bp  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  Doxyfile.in  Makefile.am  NEWS  README  README.md  REUSE.toml  TODO  autogen.sh  configure.ac  core.c  gpiod.h  gpiodetect.c  gpiofind.c  gpioget.c  gpioinfo.c  gpiomon.c  gpioset.c  libgpiod.pc.in  meson.build  meson_options.txt  tools-common.c  tools-common.h
bindings/: Makefile.am  meson.build
bindings/cxx/: CMakeLists.txt  Makefile.am  chip-info.cpp  chip.cpp  edge-event-buffer.cpp  edge-event.cpp  exception.cpp  gpiod.hpp  info-event.cpp  internal.cpp  internal.hpp  iter.cpp  libgpiodcxx.pc.in  line-config.cpp  line-info.cpp  line-request.cpp  line-settings.cpp  line.cpp  line_bulk.cpp  meson.build  misc.cpp  request-builder.cpp  request-config.cpp
bindings/cxx/examples/: .gitignore  CMakeLists.txt  Makefile.am  async_watch_line_value.cpp  find_line_by_name.cpp  get_chip_info.cpp  get_line_info.cpp  get_line_value.cpp  get_multiple_line_values.cpp  gpio_cxx_tests.cpp  gpiod_cxx_tests.cpp  gpiodetectcxx.cpp  gpiofindcxx.cpp  gpiogetcxx.cpp  gpioinfocxx.cpp  gpiomoncxx.cpp  gpionotifycxx.cpp  gpiosetcxx.cpp  meson.build  reconfigure_input_to_output.cpp  toggle_line_value.cpp  toggle_multiple_line_values.cpp  watch_line_info.cpp  watch_line_rising.cpp  watch_line_value.cpp  watch_multiple_line_values.cpp
bindings/cxx/gpiodcxx/: Makefile.am  chip-info.hpp  chip.hpp  edge-event-buffer.hpp  edge-event.hpp  exception.hpp  info-event.hpp  line-config.hpp  line-info.hpp  line-request.hpp  line-settings.hpp  line.hpp  misc.hpp  request-builder.hpp  request-config.hpp  timestamp.hpp
bindings/cxx/tests/: .gitignore  Makefile.am  check-kernel.cpp  gpio-mockup.cpp  gpio-mockup.hpp  gpiod-cxx-test-main.cpp  gpiod-cxx-test.cpp  gpiosim.cpp  gpiosim.hpp  helpers.cpp  helpers.hpp  meson.build  tests-chip-info.cpp  tests-chip.cpp  tests-edge-event.cpp  tests-event.cpp  tests-info-event.cpp  tests-iter.cpp  tests-line-config.cpp  tests-line-info.cpp  tests-line-request.cpp  tests-line-settings.cpp  tests-line.cpp  tests-misc.cpp  tests-request-config.cpp
bindings/glib/: .gitignore  Makefile.am  chip-info.c  chip.c  edge-event.c  error.c  generated-enums.c.template  generated-enums.h.template  gi-docgen.toml.in  gpiod-glib.h  gpiod-glib.pc.in  info-event.c  internal.c  internal.h  line-config.c  line-info.c  line-request.c  line-settings.c  meson.build  misc.c  request-config.c
bindings/glib/examples/: .gitignore  (+13 more)
bindings/python/: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Makefile.am  README.md  build_tests.py  generate_armv7l_wheels.sh  generate_pypi_artifacts.sh  gpiodmodule.c  meson.build  pyproject.toml  setup.py
bindings/rust/: .gitignore  Cargo.toml  Makefile.am  meson.build
dbus/client/: .gitignore  Makefile.am  common.c  common.h  detect.c  find.c  get.c  gpiocli-test.bash  gpiocli.c  info.c  meson.build  monitor.c  notify.c  reconfigure.c  release.c  request.c  requests.c  set.c  wait.c
docs/: .gitignore  Doxyfile  Makefile.am  bindings.rst  building.rst  conf.py  contributing.rst  core_api.rst  core_chip_info.rst  core_chips.rst  core_edge_event.rst  core_line_config.rst  core_line_defs.rst  core_line_info.rst  core_line_request.rst  core_line_settings.rst  core_line_watch.rst  core_misc.rst  core_request_config.rst  cpp_api.rst  cpp_chip.rst  cpp_chip_info.rst  cpp_edge_event.rst  cpp_edge_event_buffer.rst  cpp_exceptions.rst  cpp_info_event.rst  cpp_line.rst  cpp_line_config.rst  cpp_line_info.rst  cpp_line_request.rst  cpp_line_settings.rst  cpp_misc.rst  cpp_request_config.rst  dbus.rst  dbus_api.rst  glib_api.rst  gpio_tools.rst  gpio_tools_lib.rst  gpiocli_top.rst  gpioctl_top.rst  (+15 more)
examples/: .gitignore  Makefile.am  async_watch_line_value.c  find_line_by_name.c  get_line_value.c  get_multiple_line_values.c  meson.build  reconfigure_input_to_output.c  toggle_line_value.c  watch_line_info.c  watch_line_value.c  watch_multiple_line_values.c
include/: Makefile.am  gpiod.h  meson.build
lib/: Makefile.am  chip-info.c  chip.c  core.c  ctxless.c  edge-event.c  helpers.c  info-event.c  internal.c  internal.h  iter.c  line-config.c  line-info.c  line-request.c  line-settings.c  meson.build  misc.c  request-config.c
man/: .gitignore  Makefile.am  meson.build  template
src/: Makefile.am
src/lib/: CMakeLists.txt  Makefile.am  chip.c  core.c  ctxless.c  gpiod-internal.h  helpers.c  iter.c  line.c  line.h  misc.c  simple.c
src/tools/: CMakeLists.txt  Makefile.am  gpiodetect.c  gpiofind.c  gpioget.c  gpioinfo.c  gpiomon.c  gpioset.c  tools-common.c  tools-common.h
tests/: .gitignore  Makefile.am  gpiod-test-helpers.c  gpiod-test-helpers.h  gpiod-test-sim.c  gpiod-test-sim.h  gpiod-test.c  gpiod-test.h  gpiod-unit.c  helpers.h  meson.build  tests-bulk.c  tests-chip-info.c  tests-chip.c  tests-ctxless.c  tests-edge-event.c  tests-event.c  tests-gpiodetect.c  tests-gpiofind.c  tests-gpioget.c  tests-gpioinfo.c  tests-gpiomon.c  tests-gpioset.c  tests-info-event.c  tests-iter.c  tests-kernel-uapi.c  tests-line-config.c  tests-line-info.c  tests-line-request.c  tests-line-settings.c  tests-line.c  tests-misc.c  tests-request-config.c  tests-simple-api.c
tests/gpiosim/: .gitignore  Makefile.am  gpiosim-selftest.c  gpiosim.c  gpiosim.h  meson.build
tests/gpiosim-glib/: Makefile.am  gpiosim-glib.c  gpiosim-glib.h  meson.build
tests/harness/: Makefile.am  gpiod-test-common.h  gpiod-test.c  meson.build
tests/mockup/: Makefile.am  gpio-mockup.c  gpio-mockup.h
tests/scripts/: Makefile.am  gpiod-bash-test-helper.inc
tests/unit/: Makefile.am  gpiod-unit.c  gpiod-unit.h  tests-chip.c  tests-event.c  tests-iter.c  tests-line.c  tests-simple-api.c
tools/: .gitignore  Makefile.am  gpio-tools-test  gpio-tools-test.bash  gpio-tools-test.bats  gpio-tools-test.sh  gpioctl.c  gpiodetect.c  gpiofind.c  gpioget.c  gpioinfo.c  gpiomon.c  gpionotify.c  gpioset.c  gpiotools.c  gpiotools.h  libgpiotools.pc.in  meson.build  tools-common.c  tools-common.h
(+205 files in other folders)
